Launch workspace applications and support body hot swap, restart, and JFR